--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "jest",
-    "watch": "jest --watch *.js"
+    "live-Test": "jest --watch *.js"
   },
   "author": "",
   "license": "ISC",
